# ProtobufGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  configure.bat
Resources/: ClassRoom.pd  Person.pd
python/: CheckChangedFiles.py  GatherGeneratedFiles.py  GenProto.py  GenProtoCpp.py
source/: CMakeLists.txt  main.cpp
source/Assets/: EntityAsset.h  Person.h
source/Assets/School/: Chair.h  ClassRoom.h  Desk.h  Student.h  Teacher.h
source/Core/: FileSystem.cpp  FileSystem.h
source/ProtoGen/: AllProtoWrappers.h  CMakeLists.txt  ProtoFactory.cpp  ProtoFactory.h  ProtoWrapper.h  wrapper.cpp.template  wrapper.h.template
source/Support/: ProtoInclude.h  Singleton.h
